--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\PRADE\AppData\Local\Temp\testng-eclipse-1318627554\testng-customsuite.xml</span>
+                    <span>C:\Users\PRADE\AppData\Local\Temp\testng-eclipse-23478436\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.Sampletest" class="method navigator-link" hash-for-method="test1">test1</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="tests.Class_26_E2E_framework_DDT" class="method navigator-link" hash-for-method="createBooking(Vrithitha, Suram, 100, true, 2024-07-01, 2024-07-10, Lunch)">createBooking(Vrithitha, Suram, 100, true, 2024-07-01, 2024-07-10, Lunch)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="tests.Class_26_E2E_framework_DDT" class="method navigator-link" hash-for-method="createBooking(susmitha, Dodda, 100, true, 2024-07-01, 2024-07-10, Lunch)">createBooking(susmitha, Dodda, 100, true, 2024-07-01, 2024-07-10, Lunch)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +126,23 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">tests.Sampletest</span>
+              <span class="class-name">tests.Class_26_E2E_framework_DDT</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="test1">
-                  </a> <!-- test1 -->
-                  <span class="method-name">test1</span>
+                  <a name="createBooking(Vrithitha, Suram, 100, true, 2024-07-01, 2024-07-10, Lunch)">
+                  </a> <!-- createBooking(Vrithitha, Suram, 100, true, 2024-07-01, 2024-07-10, Lunch) -->
+                  <span class="method-name">createBooking</span>
+                  <span class="parameters">(Vrithitha,Suram,100,true,2024-07-01,2024-07-10,Lunch)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="createBooking(susmitha, Dodda, 100, true, 2024-07-01, 2024-07-10, Lunch)">
+                  </a> <!-- createBooking(susmitha, Dodda, 100, true, 2024-07-01, 2024-07-10, Lunch) -->
+                  <span class="method-name">createBooking</span>
+                  <span class="parameters">(susmitha,Dodda,100,true,2024-07-01,2024-07-10,Lunch)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +150,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\PRADE\AppData\Local\Temp\testng-eclipse-1318627554\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\PRADE\AppData\Local\Temp\testng-eclipse-23478436\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +159,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;tests.Sampletest&quot;&gt;
+      &lt;class name=&quot;tests.Class_26_E2E_framework_DDT&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;test1&quot;/&gt;
+          &lt;include name=&quot;createBooking&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- tests.Sampletest --&gt;
+      &lt;/class&gt; &lt;!-- tests.Class_26_E2E_framework_DDT --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -189,16 +203,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'test1')
-data.setCell(0, 2, 'tests.Sampletest')
-data.setCell(0, 3, 15);
+data.setCell(0, 1, 'createBooking')
+data.setCell(0, 2, 'tests.Class_26_E2E_framework_DDT')
+data.setCell(0, 3, 1447);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'createBooking')
+data.setCell(1, 2, 'tests.Class_26_E2E_framework_DDT')
+data.setCell(1, 3, 1124);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 15 ms</span>
+              <span class="suite-total-time">Total running time: 2 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -224,10 +242,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">tests.Sampletest</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">test1</span>
+              <div class="chronological-class-name">tests.Class_26_E2E_framework_DDT</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">createBooking(susmitha, Dodda, 100, true, 2024-07-01, 2024-07-10, Lunch)</span>
+                <span class="method-start">3188 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">createBooking(Vrithitha, Suram, 100, true, 2024-07-01, 2024-07-10, Lunch)</span>
+                <span class="method-start">4637 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
